add shimmering generate message

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <div id="imageContainer">
             <img id="game-image" src="" alt="Scramble Clue" hidden>
             <div id="victory-message" hidden>You Win!</div>
+            <div id="generating-message" hidden>Generating new game...</div>
         </div>
         <p id="scrambled-word"></p>
         <input type="text" id="user-guess">
