style changes and title

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="game-area">
+        <h1 id="gameTitle">Utu's Wild Words</h1>
         <div id="imageContainer">
             <img id="game-image" src="" alt="Scramble Clue" hidden>
             <div id="victory-message" hidden>You Win!</div>
@@ -19,6 +20,9 @@
         <button id="submit-guess">Submit</button>
         <button id="new-game-button" hidden>New Game</button>
         <p id="game-result"></p>
+        <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
+            <img src="linktree-qr.jpg" alt="Linktree">
+        </a>
     </div>
     <script src="script.js"></script>
 </body>
