add score region

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,14 @@
         <button id="submit-guess">Submit</button>
         <button id="new-game-button" hidden>New Game</button>
         <p id="game-result"></p>
-        <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
-            <img src="linktree-qr.jpg" alt="Linktree">
-        </a>
+        <div id="footer">
+            <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
+                <img src="linktree-qr.jpg" alt="Linktree">
+            </a>
+            <div id="score-container">
+                <p>Score: <span id="score">0</span></p>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
