--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <h1 id="gameTitle">Utu's Wild Words</h1>
         <div id="imageContainer">
             <img id="game-image" src="" alt="Scramble Clue" hidden>
-            <canvas id="overlay-canvas"></canvas>
+            <!--<canvas id="overlay-canvas"></canvas>-->
             <div id="victory-message" hidden>You Win!</div>
             <div id="generating-message" hidden>Generating new game...</div>
         </div>
