refactor getElementById, resolve duplicate name

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </div>
         <p id="scrambled-word"></p>
         <input type="text" id="user-guess">
-        <button id="submit-guess">Submit</button>
+        <button id="submit-guess-button">Submit</button>
         <p id="game-result"></p>
         <div id="footer">
             <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
