add letters canvas script

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
         </div>
         <p id="scrambled-word"></p>
         <input type="text" id="user-guess">
+        <canvas id="letters-canvas"></canvas>
         <button id="submit-guess-button">Submit</button>
         <p id="game-result"></p>
         <div id="footer">
