--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
     <script src="letters.js"></script>
 </body>
 </html>
