--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,6 @@
         </div>
     </div>
     <!--<script src="script.js"></script>-->
-    <script src="letters.js"></script>
+    <script src="puzzle.js"></script>
 </body>
 </html>
