disable puzzle.js

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </div>
         <p id="scrambled-word"></p>
         <input type="text" id="user-guess">
-        <canvas id="letters-canvas"></canvas>
+        <!--<canvas id="letters-canvas"></canvas>-->
         <button id="submit-guess-button">Submit</button>
         <p id="game-result"></p>
         <div id="footer">
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <!--<script src="script.js"></script>-->
-    <script src="puzzle.js"></script>
+    <script src="script.js"></script>
+    <!--<script src="puzzle.js"></script>-->
 </body>
 </html>
