--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
             <img id="game-image" src="" alt="Scramble Clue" hidden>
             <!--<canvas id="overlay-canvas"></canvas>-->
             <div id="victory-message" hidden>You Win!</div>
+            <div id="continue-message" hidden>Click to continue</div>
             <div id="generating-message" hidden>Generating new game...</div>
         </div>
         <p id="scrambled-word"></p>
