remove continue message

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
         <div id="imageContainer">
             <img id="game-image" src="" alt="Scramble Clue" hidden>
             <!--<canvas id="overlay-canvas"></canvas>-->
-            <div id="victory-message" hidden>You Win!</div>
-            <div id="continue-message" hidden>Click to continue</div>
+            <div id="victory-message" hidden>You Win!\nClick to continue
+                <div id="you-win">You Win!</div>
+                <div id="click-to-continue">Click to continue</div>
+            </div>
         </div>
         <p id="scrambled-word"></p>
         <input type="text" id="user-guess">
