remove duplicate message

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div id="imageContainer">
             <img id="game-image" src="" alt="Scramble Clue" hidden>
             <!--<canvas id="overlay-canvas"></canvas>-->
-            <div id="victory-message" hidden>You Win!\nClick to continue
+            <div id="victory-message" hidden>
                 <div id="you-win">You Win!</div>
                 <div id="click-to-continue">Click to continue</div>
             </div>
