change game-result to game-message

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <input type="text" id="user-guess">
         <!--<canvas id="letters-canvas"></canvas>-->
         <button id="submit-guess-button">Submit</button>
-        <p id="game-result"></p>
+        <p id="game-message"></p>
         <div id="footer">
             <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
                 <img src="linktree-qr.jpg" alt="Linktree">
