wrap user-guess and submit-guess in div

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,11 @@
             <div id="victory-message" hidden>You Win!<br>Click to continue</div>
         </div>
         <p id="scrambled-word"></p>
-        <input type="text" id="user-guess">
         <!--<canvas id="letters-canvas"></canvas>-->
-        <button id="submit-guess-button">Submit</button>
+        <div id="guess-control">
+            <input type="text" id="user-guess">
+            <button id="submit-guess-button">Submit</button>
+        </div>
         <p id="game-message"></p>
         <div id="footer">
             <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
