implement tile container

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
             <div id="victory-message" hidden>You Win!<br>Click to continue</div>
         </div>
         <p id="scrambled-word"></p>
+        <div id="tile-container"></div>
         <!--<canvas id="letters-canvas"></canvas>-->
         <div id="guess-control">
             <input type="text" id="user-guess">
