call rack script in html

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,6 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <!--<script src="puzzle.js"></script>-->
+    <script src="rack.js"></script>
 </body>
 </html>
