--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,9 @@
             <div id="victory-message" hidden>You Win!<br>Click to continue</div>
         </div>
         <p id="scrambled-word"></p>
-        <!--
         <svg id="rack-container" width="400" height="100">
             <rect x="10" y="30" width="380" height="40" class="rack" />
         </svg>
-        -->
         <div id="guess-control">
             <input type="text" id="user-guess">
             <button id="submit-guess-button">Submit</button>
@@ -36,6 +34,6 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <!--<script src="rack.js"></script>-->
+    <script src="rack.js"></script>
 </body>
 </html>
