hide rack container at start of game

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <div id="victory-message" hidden>You Win!<br>Click to continue</div>
         </div>
         <p id="scrambled-word"></p>
-        <svg id="rack-container" width="400" height="100">
+        <svg id="rack-container" hidden width="400" height="100">
             <rect x="10" y="30" width="380" height="40" class="rack" />
         </svg>
         <div id="guess-control">
