--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
         <p id="scrambled-word"></p>
         <svg id="rack-container" hidden width="400" height="100">
             <rect x="10" y="30" width="380" height="40" class="rack" />
-            <rect id="drag-tab" x="0" y="30" width="20" height="40" fill="blue" />
+            <rect id="drag-tab-left" x="0" y="30" width="20" height="40" fill="blue" />
+            <rect id="drag-tab-right" x="0" y="30" width="20" height="40" fill="blue" />
         </svg>
         <div id="guess-control">
             <input type="text" id="user-guess">
