add ffwd button

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,12 @@
                 <p>Score: <span id="score">0</span></p>
             </div>
             <svg class="fast-forward-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M9.5 7.5L14.25 12L9.5 16.5V7.5M6 5H4C3.44772 5 3 5.44772 3 6V18C3 18.5523 3.44772 19 4 19H6C6.55228 19 7 18.5523 7 18V6C7 5.44772 6.55228 5 6 5ZM20 5H18C17.4477 5 17 5.44772 17 6V18C17 18.5523 17.4477 19 18 19H20C20.5523 19 21 18.5523 21 18V6C21 5.44772 20.5523 5 20 5Z"/>
+                <!-- Box -->
+                <rect x="4" y="4" width="16" height="16" rx="2" ry="2" fill="transparent" stroke="black" stroke-width="2"/>
+              
+                <!-- Triangles -->
+                <polygon points="10 7 14 12 10 17" fill="black"/>
+                <polygon points="14 7 18 12 14 17" fill="black"/>
             </svg>
         </div>
     </div>
