--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <div id="score-container">
                 <p>Score: <span id="score">0</span></p>
             </div>
-            <svg class="fast-forward-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <svg class="skip-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <!-- Box -->
                 <rect x="4" y="4" width="16" height="16" rx="2" ry="2" fill="transparent" stroke="black" stroke-width="2"/>
               
