just use up arrow

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,7 @@
         <p id="scrambled-word"></p>
         <svg id="rack-container" hidden width="400" height="100">
             <rect x="10" y="30" width="380" height="40" class="rack" />
-            <svg id = "drag-tab-left" width="100" height="100" xmlns="http://www.w3.org/2000/svg">
-                <!-- Beveled Box -->
-                <rect x="10" y="30" width="20" height="40" rx="10" ry="10" style="fill:none; stroke:blue; stroke-width:3"/>
-              
-                <!-- Upward Arrow -->
-                <polygon points="50,30 30,70 70,70" style="fill:blue"/>
-            </svg> 
+            <polygon id="drag-tab-left" points="0,0 10,30 20,0" style="fill:blue"/>
             <rect id="drag-tab-right" x="0" y="30" width="20" height="40" fill="blue" />
         </svg>
         <div id="guess-control">
