--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,9 @@
             <!--<canvas id="overlay-canvas"></canvas>-->
             <div id="victory-message" hidden>You Win!<br>Click to continue</div>
         </div>
-        <p id="scrambled-word"></p>
         <svg id="rack-container" hidden width="400" height="100">
             <rect x="10" y="30" width="380" height="40" class="rack" />
-            <polygon id="drag-tab-left" points="0,0 10,30 20,0" style="fill:blue"/>
+            <rect id="drag-tab-left" x="0" y="30" width="20" height="40" fill="blue" />
             <rect id="drag-tab-right" x="0" y="30" width="20" height="40" fill="blue" />
         </svg>
         <div id="guess-control">
