remove scrambled-word event

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
             <rect x="10" y="30" width="380" height="40" class="rack" />
             <rect id="drag-tab-left" x="0" y="30" width="20" height="40" fill="blue" />
             <rect id="drag-tab-right" x="0" y="30" width="20" height="40" fill="blue" />
+            <!-- Upward arrow indicating dragging direction -->
+            <polygon points="200,10 210,30 190,30" fill="black"/>
+            <line x1="200" y1="30" x2="200" y2="50" stroke="black" stroke-width="2"/>
         </svg>
         <div id="guess-control">
             <input type="text" id="user-guess">
