--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <polygon points="10,0 20,20 0,20" fill="black"/>
             </svg>
             <svg id="drag-tab-right">
-                <rect id="drag-tab-right" x="0" y="30" width="20" height="40" fill="blue" />
+                <rect x="0" y="30" width="20" height="40" fill="blue" />
                 <polygon points="10,0 20,20 0,20" fill="black"/>
             </svg>
             <!-- Upward arrows indicating dragging direction -->
