remove submit button and duplicate arrow

--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,15 @@
             </svg>
             <svg id="drag-tab-right">
                 <rect x="0" y="30" width="20" height="40" fill="blue" />
-                <polygon points="10,0 20,20 0,20" fill="black"/>
+                <polygon id="left-arrow" points="10,0 20,20 0,20" fill="black"/>
             </svg>
             <!-- Upward arrows indicating dragging direction -->
             <!-- Arrow on top of the left rectangle -->
             
             
             <!-- Arrow on top of the right rectangle -->
-            <polygon points="390,20 400,40 380,40" fill="black"/>
+            <!--<polygon id="right-arrow" points="390,20 400,40 380,40" fill="black"/>-->
         </svg>
-        <div id="guess-control">
-            <input type="text" id="user-guess">
-            <button id="submit-guess-button">Submit</button>
-        </div>
         <p id="game-message"></p>
         <div id="footer">
             <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
