--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
         </div>
         <svg id="rack-container" hidden width="400" height="100">
             <rect x="10" y="30" width="380" height="40" class="rack" />
-            <svg id="drag-tab-left">
+            <svg id="drag-tab-left" class="drag-tab">
                 <rect x="0" y="30" width="20" height="40" fill="blue" />
-                <polygon points="10,0 20,20 0,20" fill="black"/>
+                <polygon points="10,0 20,20 0,20" class="arrow" fill="black"/>
             </svg>
-            <svg id="drag-tab-right">
+            <svg id="drag-tab-right" class="drag-tab">
                 <rect x="0" y="30" width="20" height="40" fill="blue" />
-                <polygon id="left-arrow" points="10,0 20,20 0,20" fill="black"/>
+                <polygon id="left-arrow" points="10,0 20,20 0,20" class="arrow" fill="black"/>
             </svg>
             <!-- Upward arrows indicating dragging direction -->
             <!-- Arrow on top of the left rectangle -->
