set rack id and create obj reference

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <div id="victory-message" hidden>You Win!<br>Click to continue</div>
         </div>
         <svg id="rack-container" hidden width="400" height="100">
-            <rect x="10" y="30" width="380" height="40" class="rack" />
+            <rect id="rack" x="10" y="30" width="380" height="40" class="rack" />
             <svg id="drag-tab-left" class="drag-tab">
                 <rect x="0" y="30" width="20" height="40" fill="blue" />
                 <polygon points="10,0 20,20 0,20" class="arrow" fill="black"/>
