so annoying and yet so worth it.
added constants TILE_SIZE and TILE_SPACE. all other parameters regarding the rack-container and its contents, including font size, are calculated from these two values.

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
         </div>
         <p id="scrambled-word"></p>
         <svg id="rack-container" hidden width="400" height="100">
-            <rect x="10" y="0" width="380" height="40" class="rack" />
             <rect id="drag-tab-left" x="0" y="0" width="20" height="40" fill="blue" />
+            <rect id="rack" x="0" y="0" width="380" height="40" class="rack" />
             <rect id="drag-tab-right" x="0" y="0" width="20" height="40" fill="blue" />
         </svg>
         <div id="guess-control">
