add bottom drag tab in html

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             <rect id="drag-tab-left" x="0" y="0" width="20" height="40" fill="blue" />
             <rect id="rack" x="0" y="0" width="380" height="40" class="rack" />
             <rect id="drag-tab-right" x="0" y="0" width="20" height="40" fill="blue" />
+            <rect id="drag-tab-bottom" x="0" y="0" width="380" height="40" fill="blue" />
         </svg>
         <div id="guess-control">
             <input type="text" id="user-guess">
