--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <p id="scrambled-word"></p>
         <svg id="rack-container" hidden width="400" height="100">
             <rect id="rack" x="0" y="0" width="380" height="40" class="rack" />
-            <rect id="drag-tab-bottom" x="0" y="0" width="380" height="40" fill="blue" />
+            <rect id="drag-tab-bottom" x="0" y="0" width="380" height="40" class="rack" />
         </svg>
         <div id="guess-control">
             <input type="text" id="user-guess">
