remove default text from victory msg

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div id="imageContainer">
             <img id="game-image" src="" alt="Scramble Clue" hidden>
             <!--<canvas id="overlay-canvas"></canvas>-->
-            <div id="victory-message" hidden>You Win!<br>Click to continue</div>
+            <div id="victory-message" hidden></div>
         </div>
         <p id="scrambled-word"></p>
         <svg id="rack-container" hidden width="400" height="100">
