add open graph tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Utu's Wild Words" />
+    <meta property="og:description" content="An AI-generated blend of word scramble and fine art" />
+    <meta property="og:url" content="https://utuswildwords.art" />
+    <meta property="og:image" content="https://utuswildwords.art/utu-generating-game.png" />
     <title>Utu's Wild Words</title>
     <link rel="stylesheet" href="style.css">
 </head>
