absolute paths for script.js and rack.js and style.css

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://utuswildwords.art" />
     <meta property="og:image" content="https://utuswildwords.art/utu-generating-game.png" />
     <title>Utu's Wild Words</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div id="game-area">
@@ -46,7 +46,7 @@
             </svg>
         </div>
     </div>
-    <script src="script.js"></script>
-    <script src="rack.js"></script>
+    <script src="/script.js"></script>
+    <script src="/rack.js"></script>
 </body>
 </html>
