set utu image and style.css absolute paths from /public

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://utuswildwords.art" />
     <meta property="og:image" content="https://utuswildwords.art/utu-generating-game.png" />
     <title>Utu's Wild Words</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <div id="game-area">
@@ -31,7 +31,7 @@
         <p id="game-message"></p>
         <div id="footer">
             <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
-                <img src="linktree-qr.jpg" alt="Linktree">
+                <img src="/linktree-qr.jpg" alt="Linktree">
             </a>
             <div id="score-container">
                 <p>Score: <span id="score">0</span></p>
