--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://utuswildwords.art" />
     <meta property="og:image" content="https://utuswildwords.art/utu-generating-game.png" />
     <title>Utu's Wild Words</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div id="game-area">
