change id of image container to allow css to apply

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="game-area">
         <h1 id="gameTitle">Utu's Wild Words</h1>
-        <div id="imageContainer">
+        <div id="image-container">
             <img id="game-image" src="" alt="Scramble Clue" hidden>
             <!--<canvas id="overlay-canvas"></canvas>-->
             <div id="victory-message" hidden></div>
