add google tag to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     <title>Utu's Wild Words</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FK6QKFEM2X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FK6QKFEM2X');
+</script>
 <body>
     <div id="game-area">
         <h1 id="gameTitle">Utu's Wild Words</h1>
