add appstate to index html

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
             </svg>
         </div>
     </div>
+    <script src="/AppState.js"></script>
     <script src="/script.js"></script>
     <script src="/rack.js"></script>
 </body>
