change linkedImageContainer to div

--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
         <p id="game-message"></p>
         <div id="footer">
             <!-- Contact Button -->
-            <button id="contactBtn">Artist</button>
-            <a href="https://linktr.ee/sigilToNoise" target="_blank" id="linkedImageContainer">
+            <!--<button id="contactImageContainer">Artist</button>-->
+            <div id="linkedImageContainer">
                 <img src="/linktree-qr.jpg" alt="Linktree">
-            </a>
+            </div>
             <div id="score-container">
                 <p>Score: <span id="score">0</span></p>
             </div>
