--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
         </div>
     </div>
     <script src="/AppState.js"></script>
+    <script src="/contact-render.js"></script>
     <script src="/script.js"></script>
     <script src="/rack.js"></script>
 </body>
