add contact symbol graphic

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <!-- Contact Button -->
             <!--<button id="contactImageContainer">Artist</button>-->
             <div id="linkedImageContainer">
-                <img src="/linktree-qr.jpg" alt="Linktree">
+                <img src="/contact.png" alt="Linktree">
             </div>
             <div id="score-container">
                 <p>Score: <span id="score">0</span></p>
