--- a/public/desktop/index.html
+++ b/public/desktop/index.html
@@ -28,6 +28,6 @@
         </div>
         <p id="game-message"></p>
     </div>
-    <script src="/script.js"></script>
+    <script type="module" src="/script.js"></script>
 </body>
 </html>
