--- a/public/desktop/index.html
+++ b/public/desktop/index.html
@@ -24,7 +24,7 @@
     <div id="game-area">
         <h1 id="gameTitle">Utu's Wild Words</h1>
         <div id="image-container">
-            <img id="game-image" src="/utu-under-construction.png" alt="Utu under construction" hidden>
+            <img id="game-image" src="/utu-under-construction.png" alt="Utu under construction">
         </div>
         <p id="game-message"></p>
     </div>
